@@ -8,6 +8,8 @@ package com.linkedin.avroutil1.compatibility.avro110;
 
 import by110.IntRecord;
 import by110.LongRecord;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import com.linkedin.avroutil1.Pojo;
 import com.linkedin.avroutil1.testcommon.TestUtil;
 import com.linkedin.avroutil1.compatibility.AvroCompatibilityHelper;
@@ -96,27 +98,27 @@ public class AvroCompatibilityHelperAvro110Test {
     IntRecord intRecord = new IntRecord();
     intRecord.setField(42);
     intRecord.setUnionField(55);
-    intRecord.setArrayField(List.of(100, -200));
-    intRecord.setMapField(Map.of("key1", 300, "key2", -400));
-    intRecord.setUnionArrayField(List.of(99, -199));
-    intRecord.setUnionMapField(Map.of("key1", 298, "key2", 355));
+    intRecord.setArrayField(ImmutableList.of(100, -200));
+    intRecord.setMapField(ImmutableMap.of("key1", 300, "key2", -400));
+    intRecord.setUnionArrayField(ImmutableList.of(99, -199));
+    intRecord.setUnionMapField(ImmutableMap.of("key1", 298, "key2", 355));
     byte[] binary = toBinary(intRecord);
 
     IntRecord roundtrip = toSpecificRecord(binary, IntRecord.SCHEMA$, IntRecord.SCHEMA$);
     Assert.assertEquals(roundtrip.getField(), 42);
     Assert.assertEquals(roundtrip.getUnionField().intValue(), 55);
-    Assert.assertEquals(roundtrip.getArrayField(), List.of(100, -200));
-    Assert.assertEquals(roundtrip.getMapField(), Map.of(new Utf8("key1"), 300, new Utf8("key2"), -400));
-    Assert.assertEquals(roundtrip.getUnionArrayField(), List.of(99, -199));
-    Assert.assertEquals(roundtrip.getUnionMapField(), Map.of(new Utf8("key1"), 298, new Utf8("key2"), 355));
+    Assert.assertEquals(roundtrip.getArrayField(), ImmutableList.of(100, -200));
+    Assert.assertEquals(roundtrip.getMapField(), ImmutableMap.of(new Utf8("key1"), 300, new Utf8("key2"), -400));
+    Assert.assertEquals(roundtrip.getUnionArrayField(), ImmutableList.of(99, -199));
+    Assert.assertEquals(roundtrip.getUnionMapField(), ImmutableMap.of(new Utf8("key1"), 298, new Utf8("key2"), 355));
 
     GenericRecord genericRecord = toGenericRecord(binary, IntRecord.SCHEMA$, IntRecord.SCHEMA$);
     Assert.assertEquals(genericRecord.get("field"), 42);
     Assert.assertEquals(genericRecord.get("unionField"), 55);
-    Assert.assertEquals(genericRecord.get("arrayField"), List.of(100, -200));
-    Assert.assertEquals(genericRecord.get("mapField"), Map.of(new Utf8("key1"), 300, new Utf8("key2"), -400));
-    Assert.assertEquals(genericRecord.get("unionArrayField"), List.of(99, -199));
-    Assert.assertEquals(genericRecord.get("unionMapField"), Map.of(new Utf8("key1"), 298, new Utf8("key2"), 355));
+    Assert.assertEquals(genericRecord.get("arrayField"), ImmutableList.of(100, -200));
+    Assert.assertEquals(genericRecord.get("mapField"), ImmutableMap.of(new Utf8("key1"), 300, new Utf8("key2"), -400));
+    Assert.assertEquals(genericRecord.get("unionArrayField"), ImmutableList.of(99, -199));
+    Assert.assertEquals(genericRecord.get("unionMapField"), ImmutableMap.of(new Utf8("key1"), 298, new Utf8("key2"), 355));
   }
 
   @Test
@@ -124,27 +126,27 @@ public class AvroCompatibilityHelperAvro110Test {
     LongRecord longRecord = new LongRecord();
     longRecord.setField(42L);
     longRecord.setUnionField(55L);
-    longRecord.setArrayField(List.of(100L, -200L));
-    longRecord.setMapField(Map.of("key1", 300L, "key2", -400L));
-    longRecord.setUnionArrayField(List.of(99L, -199L));
-    longRecord.setUnionMapField(Map.of("key1", 298L, "key2", 355L));
+    longRecord.setArrayField(ImmutableList.of(100L, -200L));
+    longRecord.setMapField(ImmutableMap.of("key1", 300L, "key2", -400L));
+    longRecord.setUnionArrayField(ImmutableList.of(99L, -199L));
+    longRecord.setUnionMapField(ImmutableMap.of("key1", 298L, "key2", 355L));
     byte[] binary = toBinary(longRecord);
 
     LongRecord roundtrip = toSpecificRecord(binary, LongRecord.SCHEMA$, LongRecord.SCHEMA$);
     Assert.assertEquals(roundtrip.getField(), 42L);
     Assert.assertEquals(roundtrip.getUnionField().longValue(), 55L);
-    Assert.assertEquals(roundtrip.getArrayField(), List.of(100L, -200L));
-    Assert.assertEquals(roundtrip.getMapField(), Map.of(new Utf8("key1"), 300L, new Utf8("key2"), -400L));
-    Assert.assertEquals(roundtrip.getUnionArrayField(), List.of(99L, -199L));
-    Assert.assertEquals(roundtrip.getUnionMapField(), Map.of(new Utf8("key1"), 298L, new Utf8("key2"), 355L));
+    Assert.assertEquals(roundtrip.getArrayField(), ImmutableList.of(100L, -200L));
+    Assert.assertEquals(roundtrip.getMapField(), ImmutableMap.of(new Utf8("key1"), 300L, new Utf8("key2"), -400L));
+    Assert.assertEquals(roundtrip.getUnionArrayField(), ImmutableList.of(99L, -199L));
+    Assert.assertEquals(roundtrip.getUnionMapField(), ImmutableMap.of(new Utf8("key1"), 298L, new Utf8("key2"), 355L));
 
     GenericRecord genericRecord = toGenericRecord(binary, LongRecord.SCHEMA$, LongRecord.SCHEMA$);
     Assert.assertEquals(genericRecord.get("field"), 42L);
     Assert.assertEquals(genericRecord.get("unionField"), 55L);
-    Assert.assertEquals(genericRecord.get("arrayField"), List.of(100L, -200L));
-    Assert.assertEquals(genericRecord.get("mapField"), Map.of(new Utf8("key1"), 300L, new Utf8("key2"), -400L));
-    Assert.assertEquals(genericRecord.get("unionArrayField"), List.of(99L, -199L));
-    Assert.assertEquals(genericRecord.get("unionMapField"), Map.of(new Utf8("key1"), 298L, new Utf8("key2"), 355L));
+    Assert.assertEquals(genericRecord.get("arrayField"), ImmutableList.of(100L, -200L));
+    Assert.assertEquals(genericRecord.get("mapField"), ImmutableMap.of(new Utf8("key1"), 300L, new Utf8("key2"), -400L));
+    Assert.assertEquals(genericRecord.get("unionArrayField"), ImmutableList.of(99L, -199L));
+    Assert.assertEquals(genericRecord.get("unionMapField"), ImmutableMap.of(new Utf8("key1"), 298L, new Utf8("key2"), 355L));
   }
 
   @Test
@@ -152,27 +154,27 @@ public class AvroCompatibilityHelperAvro110Test {
     IntRecord intRecord = new IntRecord();
     intRecord.setField(42);
     intRecord.setUnionField(55);
-    intRecord.setArrayField(List.of(100, -200));
-    intRecord.setMapField(Map.of("key1", 300, "key2", -400));
-    intRecord.setUnionArrayField(List.of(99, -199));
-    intRecord.setUnionMapField(Map.of("key1", 298, "key2", 355));
+    intRecord.setArrayField(ImmutableList.of(100, -200));
+    intRecord.setMapField(ImmutableMap.of("key1", 300, "key2", -400));
+    intRecord.setUnionArrayField(ImmutableList.of(99, -199));
+    intRecord.setUnionMapField(ImmutableMap.of("key1", 298, "key2", 355));
     byte[] binary = toBinary(intRecord);
 
     LongRecord longRecord = toSpecificRecord(binary, IntRecord.SCHEMA$, LongRecord.SCHEMA$);
     Assert.assertEquals(longRecord.getField(), 42L);
     Assert.assertEquals(longRecord.getUnionField().longValue(), 55L);
-    Assert.assertEquals(longRecord.getArrayField(), List.of(100L, -200L));
-    Assert.assertEquals(longRecord.getMapField(), Map.of(new Utf8("key1"), 300L, new Utf8("key2"), -400L));
-    Assert.assertEquals(longRecord.getUnionArrayField(), List.of(99L, -199L));
-    Assert.assertEquals(longRecord.getUnionMapField(), Map.of(new Utf8("key1"), 298L, new Utf8("key2"), 355L));
+    Assert.assertEquals(longRecord.getArrayField(), ImmutableList.of(100L, -200L));
+    Assert.assertEquals(longRecord.getMapField(), ImmutableMap.of(new Utf8("key1"), 300L, new Utf8("key2"), -400L));
+    Assert.assertEquals(longRecord.getUnionArrayField(), ImmutableList.of(99L, -199L));
+    Assert.assertEquals(longRecord.getUnionMapField(), ImmutableMap.of(new Utf8("key1"), 298L, new Utf8("key2"), 355L));
 
     GenericRecord genericRecord = toGenericRecord(binary, IntRecord.SCHEMA$, LongRecord.SCHEMA$);
     Assert.assertEquals(genericRecord.get("field"), 42L);
     Assert.assertEquals(genericRecord.get("unionField"), 55L);
-    Assert.assertEquals(genericRecord.get("arrayField"), List.of(100L, -200L));
-    Assert.assertEquals(genericRecord.get("mapField"), Map.of(new Utf8("key1"), 300L, new Utf8("key2"), -400L));
-    Assert.assertEquals(genericRecord.get("unionArrayField"), List.of(99L, -199L));
-    Assert.assertEquals(genericRecord.get("unionMapField"), Map.of(new Utf8("key1"), 298L, new Utf8("key2"), 355L));
+    Assert.assertEquals(genericRecord.get("arrayField"), ImmutableList.of(100L, -200L));
+    Assert.assertEquals(genericRecord.get("mapField"), ImmutableMap.of(new Utf8("key1"), 300L, new Utf8("key2"), -400L));
+    Assert.assertEquals(genericRecord.get("unionArrayField"), ImmutableList.of(99L, -199L));
+    Assert.assertEquals(genericRecord.get("unionMapField"), ImmutableMap.of(new Utf8("key1"), 298L, new Utf8("key2"), 355L));
   }
 
   @Test
@@ -180,27 +182,27 @@ public class AvroCompatibilityHelperAvro110Test {
     LongRecord longRecord = new LongRecord();
     longRecord.setField(42L);
     longRecord.setUnionField(55L);
-    longRecord.setArrayField(List.of(100L, -200L));
-    longRecord.setMapField(Map.of("key1", 300L, "key2", -400L));
-    longRecord.setUnionArrayField(List.of(99L, -199L));
-    longRecord.setUnionMapField(Map.of("key1", 298L, "key2", 355L));
+    longRecord.setArrayField(ImmutableList.of(100L, -200L));
+    longRecord.setMapField(ImmutableMap.of("key1", 300L, "key2", -400L));
+    longRecord.setUnionArrayField(ImmutableList.of(99L, -199L));
+    longRecord.setUnionMapField(ImmutableMap.of("key1", 298L, "key2", 355L));
     byte[] binary = toBinary(longRecord);
 
     IntRecord intRecord = toSpecificRecord(binary, LongRecord.SCHEMA$, IntRecord.SCHEMA$);
     Assert.assertEquals(intRecord.getField(), 42);
     Assert.assertEquals(intRecord.getUnionField().intValue(), 55);
-    Assert.assertEquals(intRecord.getArrayField(), List.of(100, -200));
-    Assert.assertEquals(intRecord.getMapField(), Map.of(new Utf8("key1"), 300, new Utf8("key2"), -400));
-    Assert.assertEquals(intRecord.getUnionArrayField(), List.of(99, -199));
-    Assert.assertEquals(intRecord.getUnionMapField(), Map.of(new Utf8("key1"), 298, new Utf8("key2"), 355));
+    Assert.assertEquals(intRecord.getArrayField(), ImmutableList.of(100, -200));
+    Assert.assertEquals(intRecord.getMapField(), ImmutableMap.of(new Utf8("key1"), 300, new Utf8("key2"), -400));
+    Assert.assertEquals(intRecord.getUnionArrayField(), ImmutableList.of(99, -199));
+    Assert.assertEquals(intRecord.getUnionMapField(), ImmutableMap.of(new Utf8("key1"), 298, new Utf8("key2"), 355));
 
     GenericRecord genericRecord = toGenericRecord(binary, LongRecord.SCHEMA$, IntRecord.SCHEMA$);
     Assert.assertEquals(genericRecord.get("field"), 42);
     Assert.assertEquals(genericRecord.get("unionField"), 55);
-    Assert.assertEquals(genericRecord.get("arrayField"), List.of(100, -200));
-    Assert.assertEquals(genericRecord.get("mapField"), Map.of(new Utf8("key1"), 300, new Utf8("key2"), -400));
-    Assert.assertEquals(genericRecord.get("unionArrayField"), List.of(99, -199));
-    Assert.assertEquals(genericRecord.get("unionMapField"), Map.of(new Utf8("key1"), 298, new Utf8("key2"), 355));
+    Assert.assertEquals(genericRecord.get("arrayField"), ImmutableList.of(100, -200));
+    Assert.assertEquals(genericRecord.get("mapField"), ImmutableMap.of(new Utf8("key1"), 300, new Utf8("key2"), -400));
+    Assert.assertEquals(genericRecord.get("unionArrayField"), ImmutableList.of(99, -199));
+    Assert.assertEquals(genericRecord.get("unionMapField"), ImmutableMap.of(new Utf8("key1"), 298, new Utf8("key2"), 355));
   }
 
   @Test
@@ -211,16 +213,16 @@ public class AvroCompatibilityHelperAvro110Test {
     LongRecord longRecord2 = LongRecord.newBuilder().setField(0L).setUnionField((long) Integer.MIN_VALUE - 1L).build();
     byte[] binary2 = toBinary(longRecord2);
 
-    LongRecord longRecord3 = LongRecord.newBuilder().setField(0L).setArrayField(List.of((long) Integer.MAX_VALUE + 1L)).build();
+    LongRecord longRecord3 = LongRecord.newBuilder().setField(0L).setArrayField(ImmutableList.of((long) Integer.MAX_VALUE + 1L)).build();
     byte[] binary3 = toBinary(longRecord3);
 
-    LongRecord longRecord4 = LongRecord.newBuilder().setField(0L).setMapField(Map.of("haha", (long) Integer.MIN_VALUE - 1L)).build();
+    LongRecord longRecord4 = LongRecord.newBuilder().setField(0L).setMapField(ImmutableMap.of("haha", (long) Integer.MIN_VALUE - 1L)).build();
     byte[] binary4 = toBinary(longRecord4);
 
-    LongRecord longRecord5 = LongRecord.newBuilder().setField(0L).setUnionArrayField(List.of((long) Integer.MAX_VALUE + 1L)).build();
+    LongRecord longRecord5 = LongRecord.newBuilder().setField(0L).setUnionArrayField(ImmutableList.of((long) Integer.MAX_VALUE + 1L)).build();
     byte[] binary5 = toBinary(longRecord5);
 
-    LongRecord longRecord6 = LongRecord.newBuilder().setField(0L).setUnionMapField(Map.of("haha", (long) Integer.MIN_VALUE - 1L)).build();
+    LongRecord longRecord6 = LongRecord.newBuilder().setField(0L).setUnionMapField(ImmutableMap.of("haha", (long) Integer.MIN_VALUE - 1L)).build();
     byte[] binary6 = toBinary(longRecord6);
 
     Assert.assertThrows(AvroTypeException.class, () -> toSpecificRecord(binary, LongRecord.SCHEMA$, IntRecord.SCHEMA$));
